# chat-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: development.md  privacy.md
scripts/: build.ps1  generate_manual_cases.py  run_dev.ps1
src/recognize/: __main__.py  app.py
src/recognize/capture/: screen_capture.py
src/recognize/models/: config.py  recognition_result.py
src/recognize/recognition/: card_labels.py  formatting.py  ocr_engine.py  page_signature.py  parser.py  pipeline.py  region_detector.py  unread_detector.py
src/recognize/storage/: config_store.py
src/recognize/ui/: floating_window.py  region_overlay.py  region_selector.py  styles.py
src/recognize/utils/: logging.py
tests/: manual_case_data.py  test_card_labels.py  test_floating_window.py  test_formatting.py  test_manual_image_regression.py  test_page_signature.py  test_parser.py  test_pipeline.py  test_region_detector.py  test_unread_detector.py
