[project]
name = "recognize"
version = "0.1.0"
description = "Floating local unread/candidate recognition assistant"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "mss>=9.0",
  "opencv-python>=4.10",
  "numpy>=1.26",
  "pydantic>=2.7",
  "rapidocr-onnxruntime>=1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
